--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -174,6 +174,7 @@ ROTATING BAND
      Number of Rotating Bands: 0
      Number of Face Tags for Rotating Band 1: 2
      Faces Tags for Rotating Band 1 : 27 32
+     Rotating Band Motion Mode: Prescribed   #Prescribed (in code); Computed (Force driven)    
 
 DG INTERFACE
 {
