--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -90,8 +90,9 @@ SOLUTION CONTROL
 #     Equation of State: Incompressible     # sets ipress=-1 matflag(1,n)
      Viscous Control:   Viscous             # replaces navier (0 no, 1 yes)
      Mesh Motion Solver: None		            # None, Fixed, Elastic
-     Mesh Elas Model:  None                 # None, Force-driven
-     Mesh Elas Force-driven case: 0         # 0 means it is not Force-driven
+     Mesh Elas Model:  None                 # None, Force-driven, Set-in-code
+     Mesh Elas Force-driven case: NODEFAULT
+     Mesh Elas Set-in-code case: NODEFAULT         
      Turbulence Model:  No-Model            # No-Model, RANS-SA,
                                             # RANS, RANS-KE,  LES, DES97, DDES 
      Number of Timesteps:    NODEFAULT      # replaces nsteps(1) (ntseq wired =1)
@@ -175,6 +176,14 @@ ROTATING BAND
      Number of Face Tags for Rotating Band 1: 2
      Faces Tags for Rotating Band 1 : 27 32
      Rotating Band Force Option: Normal   #Normal; Total    
+}
+
+SLIP FLOW BC
+{
+     Time Depend Flow BC: On
+     Time Depend Flow BC Case: 1
+}
+
 
 DG INTERFACE
 {
