changed default option for Flow Slip BC in input.config to Off

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -180,7 +180,7 @@ ROTATING BAND
 
 SLIP FLOW BC
 {
-     Time Depend Flow BC: On
+     Time Depend Flow BC: Off
      Time Depend Flow BC Case: 1
 }
 
